# ComfyUI-Lotus

./: .gitignore  README.md  nodes.py  pyproject.toml
configs/: lotus_unet_config.json
examples/: lotus_depth_g_example_01.json  lotus_normal_g_example_01.json
